make-a-wish-salesforce/src/objects/Spanish_Translations__mdt.object
<CustomObject>
    <description>Spanish translations for picklist values</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish__c</fullName>
        <label>Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>Race/Ethnicity</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Spanish Translations</label>
    <pluralLabel>Spanish Translations</pluralLabel>
</CustomObject>